--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@auth0/auth0-react": "^1.12.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mantine/carousel": "^5.8.2",
-    "@mantine/core": "^6.0.9",
-    "@mantine/hooks": "^5.8.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons": "^1.112.0",
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "styled-components": "^5.3.10",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
